--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oyster Farm Master Pro (IST)</title>
+    <title>Oyster Farm Master Pro</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         :root {
@@ -31,12 +31,14 @@
         .acc-tag { font-size: 9px; padding: 2px 5px; border-radius: 3px; color: white; font-weight: bold; margin-left: 4px; }
         .Bipin { background: var(--bipin); } .Arjun { background: var(--arjun); } .Kotak { background: var(--kotak); }
         .actions { display: flex; gap: 10px; color: #888; cursor: pointer; }
+        .settings-row { display: flex; align-items: center; justify-content: space-between; margin-bottom: 5px; font-size: 13px; }
+        .settings-row input { width: 80px; padding: 5px; margin: 0; }
     </style>
 </head>
 <body>
 
     <h1 style="text-align:center; margin-bottom:5px;">🍄 Farm Master Pro</h1>
-    <div id="status" class="sync-status">✓ Connected (IST Mode)</div>
+    <div id="status" class="sync-status">✓ Connected</div>
 
     <div class="card">
         <h2>📦 Stock Runway</h2>
@@ -130,26 +132,51 @@
         </div>
     </div>
 
+    <div class="card" id="settings-panel">
+        <h2>⚙️ Usage Settings (Per Day)</h2>
+        <div id="usage-inputs"></div>
+        <button onclick="saveUsageSettings()" style="margin-top:10px; background:var(--arjun)">Update Usage Rates</button>
+    </div>
+
     <script>
-        const GOOGLE_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbyFMQadF8BEZ_7T5VW3VfprN4oa_srF_nSfXvlM6RVV6oEnERmCp-UymFl_ts3nEd6Z/exec";
+        const GOOGLE_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbyFMQadF8BEZ_7T5VW3VfprN4oa_srF_nSfXvlM6RVV6oEnERmCp-UymFl_ts3nEd6Z/exec"; 
         let dbMaster = [];
         let myChart;
 
-        const dailyUsage = { "Straw": 5, "Spawn": 0.5, "Bavistine": 0.05, "Formalin": 0.1, "PP Bags": 0.2, "Rubber Bands": 0.05, "Cotton": 0.1, "Punnets": 10 };
+        // Default usage rates if none are saved
+        let dailyUsage = JSON.parse(localStorage.getItem('mushroomUsage')) || {
+            "Straw": 5, "Spawn": 0.5, "Bavistine": 0.05, "Formalin": 0.1, 
+            "PP Bags": 0.2, "Rubber Bands": 0.05, "Cotton": 0.1, "Punnets": 10
+        };
+
+        const units = { "Straw": "kg", "Spawn": "kg", "Bavistine": "kg", "Formalin": "L", "PP Bags": "kg", "Rubber Bands": "kg", "Cotton": "rolls", "Punnets": "pcs" };
         const safeNum = (val) => isNaN(parseFloat(val)) ? 0 : parseFloat(val);
 
-        // Utility to get today's date in IST YYYY-MM-DD
-        function getISTDate(dateObj = new Date()) {
-            return dateObj.toLocaleDateString('en-CA', { timeZone: 'Asia/Kolkata' });
-        }
-
         window.onload = () => {
-            const today = getISTDate();
-            document.getElementById('e-date').value = today;
-            document.getElementById('s-date').value = today;
-            document.getElementById('hw-date').value = today;
+            loadUsageSettings();
             loadCloudData();
         };
+
+        function loadUsageSettings() {
+            const container = document.getElementById('usage-inputs');
+            container.innerHTML = '';
+            for (let item in dailyUsage) {
+                container.innerHTML += `
+                    <div class="settings-row">
+                        <span>${item} (${units[item]}/day)</span>
+                        <input type="number" step="0.01" id="set-${item}" value="${dailyUsage[item]}">
+                    </div>`;
+            }
+        }
+
+        function saveUsageSettings() {
+            for (let item in dailyUsage) {
+                dailyUsage[item] = safeNum(document.getElementById(`set-${item}`).value);
+            }
+            localStorage.setItem('mushroomUsage', JSON.stringify(dailyUsage));
+            alert("Usage settings updated!");
+            renderAll();
+        }
 
         async function loadCloudData() {
             document.getElementById('status').innerText = "⌛ Syncing...";
@@ -157,12 +184,13 @@
                 const response = await fetch(GOOGLE_SCRIPT_URL);
                 dbMaster = await response.json();
                 renderAll();
-                document.getElementById('status').innerText = "✓ Connected (IST)";
+                document.getElementById('status').innerText = "✓ Connected";
             } catch (e) { document.getElementById('status').innerText = "⚠ Offline"; }
         }
 
         async function addData(type) {
-            let dateInput = document.getElementById(type==='exp'?'e-date':(type==='sale'?'s-date':'hw-date')).value;
+            const today = new Date().toLocaleDateString('en-CA', { timeZone: 'Asia/Kolkata' });
+            let dateInput = document.getElementById(type==='exp'?'e-date':(type==='sale'?'s-date':'hw-date')).value || today;
             let payload = { action: "add", type, date: dateInput, details: "", amt: 0, qty: 0, paidBy: "" };
 
             if (type === 'exp') {
@@ -185,7 +213,7 @@
 
             document.getElementById('status').innerText = "⌛ Saving...";
             await fetch(GOOGLE_SCRIPT_URL, { method: 'POST', mode: 'no-cors', body: JSON.stringify(payload) });
-            setTimeout(loadCloudData, 1000); // Small delay to let Google process
+            setTimeout(loadCloudData, 1000);
             ['e-amt','e-qty','s-cust','s-qty','s-price','y-weight','w-val'].forEach(id => { if(document.getElementById(id)) document.getElementById(id).value = ''; });
         }
 
@@ -206,7 +234,7 @@
                 document.getElementById('s-qty').value = item.qty;
                 document.getElementById('s-price').value = item.amt / (item.qty || 1);
             }
-            alert("Loaded into form. Fix and Save. Remember to delete the old row!");
+            alert("Loaded! Update values and click Save. Delete old entry manually.");
         }
 
         async function deleteRow(rowId) {
@@ -236,28 +264,18 @@
             const sDisplay = document.getElementById('stock-display');
             sDisplay.innerHTML = '';
             for(let item in stock) {
-                const runway = dailyUsage[item] ? Math.floor(stock[item] / dailyUsage[item]) : 0;
-                const unit = item === "Formalin" ? "L" : (item === "Punnets" ? "pcs" : (item === "Cotton" ? "rolls" : "kg"));
+                const rate = dailyUsage[item] || 1;
+                const runway = Math.floor(stock[item] / rate);
+                const unit = units[item];
                 sDisplay.innerHTML += `<div class="stock-item ${runway < 3 ? 'low-stock' : ''}"><div><b>${item}</b>: ${stock[item].toFixed(1)} ${unit}</div><div style="font-size:10px">${runway < 3 ? '⚠️ Low' : runway + 'd left'}</div></div>`;
             }
 
             dbMaster.sort((a,b) => new Date(b.date) - new Date(a.date)).forEach(i => {
                 const amt = safeNum(i.amt);
-                let valStr = "";
-                if(i.type === 'exp') { te += amt; valStr = `₹${amt}`; }
-                else if(i.type === 'sale') { ts += amt; valStr = `₹${amt}`; }
-                else if(i.type === 'yield') { valStr = `${amt} kg`; }
-                else if(i.type === 'waste') { valStr = `${amt} ${i.details.includes('Mushroom')?'kg':'Bags'}`; }
-
-                // Force date display to match IST
-                const displayDate = i.date.split('T')[0];
-
-                body.innerHTML += `<tr>
-                    <td>${displayDate}</td>
-                    <td>${i.details}${i.paidBy&&i.type==='exp' ? `<span class="acc-tag ${i.paidBy}">${i.paidBy[0]}</span>`:''}</td>
-                    <td>${valStr}</td>
-                    <td><div class="actions"><span onclick="editRow(${i.rowId})">✏️</span><span onclick="deleteRow(${i.rowId})">🗑️</span></div></td>
-                </tr>`;
+                let valStr = (i.type === 'exp' || i.type === 'sale') ? `₹${amt}` : (i.type === 'yield' ? `${amt} kg` : `${amt} ${i.details.includes('Mushroom')?'kg':'Bags'}`);
+                if(i.type === 'exp') te += amt;
+                if(i.type === 'sale') ts += amt;
+                body.innerHTML += `<tr><td>${i.date.split('T')[0]}</td><td>${i.details}${i.paidBy&&i.type==='exp'?`<span class="acc-tag ${i.paidBy}">${i.paidBy[0]}</span>`:''}</td><td>${valStr}</td><td><div class="actions"><span onclick="editRow(${i.rowId})">✏️</span><span onclick="deleteRow(${i.rowId})">🗑️</span></div></td></tr>`;
             });
             document.getElementById('exp-total').innerText = '₹' + te.toLocaleString('en-IN');
             document.getElementById('sales-total').innerText = '₹' + ts.toLocaleString('en-IN');
@@ -267,11 +285,8 @@
 
         function shareWeeklyReport() {
             const last7Days = new Date(); last7Days.setDate(last7Days.getDate() - 7);
-            const weeklyData = dbMaster.filter(i => new Date(i.date) >= last7Days);
-            const ws = weeklyData.filter(i => i.type === 'sale').reduce((a, b) => a + safeNum(b.amt), 0);
-            const we = weeklyData.filter(i => i.type === 'exp').reduce((a, b) => a + safeNum(b.amt), 0);
-            const wh = weeklyData.filter(i => i.type === 'yield').reduce((a, b) => a + safeNum(b.amt), 0);
-            const msg = `🍄 *Weekly Report (IST)* 🍄%0A💰 *Sales:* ₹${ws}%0A💸 *Expenses:* ₹${we}%0A📈 *Profit:* ₹${ws - we}%0A🍄 *Harvest:* ${wh} kg%0A-----------------%0A_Farm Master Pro_`;
+            const ws = dbMaster.filter(i => new Date(i.date) >= last7Days && i.type === 'sale').reduce((a, b) => a + safeNum(b.amt), 0);
+            const msg = `🍄 *Oyster Farm Report* %0A💰 Sales: ₹${ws}%0A-----------------`;
             window.open(`https://wa.me/?text=${msg}`, '_blank');
         }
 
