--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 </div>
 
 <script>
-    const GOOGLE_URL = "YOUR_NEW_DEPLOYMENT_URL_HERE";
+    const GOOGLE_URL = "https://script.google.com/macros/s/AKfycbwnDjr52SAikps_kDZ-xe58hXfnPUYdRhVI4lbf1k_2d45CxR7-HrgC37CfEeVM4h_S/exec";
     let db = [];
     const usage = { "Straw": 1.5, "Spawn": 0.12, "Punnets": 10, "Bavistine": 0.5, "Formalin": 5 };
 
